[gd_scene load_steps=7 format=3 uid="uid://dr4f5oh38p8fb"]

[ext_resource type="Script" path="res://Scripts/UI/Instances/ServerDisplayEdit.gd" id="1_xw1hr"]
[ext_resource type="Texture2D" uid="uid://cl0ov10fdidsx" path="res://Assets/UI/HUD/server_icons.png" id="2_cy7nr"]
[ext_resource type="PackedScene" uid="uid://crouk2ea4clq6" path="res://Scenes/UI/Instances/ServerIconMenu.tscn" id="3_6uc26"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2yvu"]
bg_color = Color(0.109804, 0.0627451, 0.156863, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30cje"]
bg_color = Color(0.156863, 0.156863, 0.294118, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxx43"]
atlas = ExtResource("2_cy7nr")
region = Rect2(0, 0, 5, 5)
margin = Rect2(1, 1, 2, 2)

[node name="ServerDisplayNew" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xw1hr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.780392)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -260.0
offset_right = 323.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q2yvu")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.635294, 0.560784, 1, 1)
theme_override_colors/font_outline_color = Color(0.145098, 0.0470588, 0.219608, 1)
theme_override_font_sizes/font_size = 32
text = "New Server"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 0.898039, 0.996078, 1)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Server Name"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "My Server"
placeholder_text = "My Server"
max_length = 28
expand_to_text_length = true
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.815686, 1, 0.913725, 1)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Server IP"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
caret_blink = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Icon"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30cje")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
texture = SubResource("AtlasTexture_xxx43")
stretch_mode = 5

[node name="Icon" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "Change Icon"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Cancel"

[node name="Save" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Add"

[node name="ServerIconMenu" parent="." instance=ExtResource("3_6uc26")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/Icon" to="." method="_on_icon_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4/Save" to="." method="_on_save_pressed"]
